Fixed spacing between buttons

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -26,6 +26,8 @@ h3 {
   margin-right: 10%;
 }
 
-.paper {
-  margin-left: 20%;
+.editDeleteButtonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
